[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlmass"
version = "0.1.0"
description = "Bulk downloader for YouTube, TikTok, Douyin (video + mp3)"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0.0",
]

[project.scripts]
dlmass = "dlmass.cli:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
